--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
   <body>
     <div class="card">
       <div class="imgBx">
-        <img
+        <!--<img
           src="https://i.pinimg.com/564x/3e/b2/f7/3eb2f70bbd7cbc175f2ae3ffa7a6486d.jpg"
-          alt=""
+          alt="shoe"
+        />-->
+        <img
+          src="/assets/Nike Air Max 270 Liquid Metal Sneakers in Black_Photo Blue_Blue Fury.jpg"
         />
       </div>
       <div class="details">
@@ -36,6 +39,5 @@
         </div>
       </div>
     </div>
-    <p class="tag">@junaidcoder</p>
   </body>
 </html>
